# mpc

./: .cursorignore  .dockerignore  Cargo.toml  Dockerfile.local  latest_mpc_with_SGX_started_by_launcher_new_modified_report_data_v2.txt  latest_mpc_with_SGX_started_by_launcher_new_modified_report_data_v2.txt:Zone.Identifier  patch_genesis.js
.cursor/rules/: mpc-aws-infra.mdc  near-mpc-repo.mdc
attestation/src/: collateral.rs  report_data.rs
crates/attestation/assets/: tcb_info.json
crates/attestation/src/: attestation.rs
crates/backup-cli/src/: backup.rs  (+1 more)
crates/key-utils/: Cargo.toml
crates/key-utils/src/: lib.rs  serialization.rs
crates/primitives/: Cargo.toml
devnet/src/: cli.rs
infra/aws-cdk/: .env.example  .gitignore  DEBUGGING_SUMMARY.md  DEBUG_PROMPT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  INTEGRATION_GUIDE.md  MORNING_START.md  NEXT_STEPS.md  QUICKSTART.md  README.md  SESSION_REPORT_2025-12-03.md  TROUBLESHOOTING_RESULTS.md  cdk-outputs.json  cdk.context.json  cdk.json  config.example.json  config.local.json  decoded_genesis.json  deploy-mpc-nodes.sh  deployment-state.json  deployment-status.md  fetch-validator-key.sh  generate-and-deploy.sh  genesis_base64.txt  get-new-near-info.sh  mpc-node-keys.json  node0-validator-key.json  package-lock.json  package.json  patched_genesis.json  redeploy-mpc.sh  secrets-policy.json  test-task-def.json  update-mpc-config.sh
node/: Cargo.toml
pytest/backup-service/: secrets.json
pytest/tests/: test_migration_service.py
scripts/: update-mpc-node.sh
tee_launcher/: launcher_docker_compose.yaml
(+26 files in other folders)
