[package]
name = "key-utils"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
threshold-signatures = { git = "https://github.com/near/threshold-signatures", rev = "5fd9fe7d45db3b653d300d393b95719f6fc219b3" }
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }
k256 = { workspace = true }
near-sdk = { workspace = true }
borsh = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
